--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Random Number Gusser, with JS" />
+    <meta name="description" content="Random Number Guesser, with JS" />
     <meta name="keywords" content="mths, icd2o" />
     <meta name="author" content="Bain Liao" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,7 +34,7 @@
       href="./favicon-16x16.png"
     />
     <link rel="manifest" href="./site.webmanifest" />
-    <title>Random Number Gusser, with JS</title>
+    <title>Random Number Guesser, with JS</title>
   </head>
 
 <body>
@@ -43,7 +43,7 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Random Number Gusser, with JS</span>
+        <span class="mdl-layout-title">Random Number Guesser, with JS</span>
       </div>
     </header>
     <main class="mdl-layout__content">
